@@ -366,6 +366,7 @@
 								content: "\e114";
 								font-size: 2.2rem;
 								line-height: 4rem;
+								color: rgb(255, 255, 255);
 	    					}
 	    				}
     					
